<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pant_prin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_multiplicacion"
    tools:context=".pantalla_principal">

    <TextView
        android:id="@+id/titulo_prin"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:text="@string/text_inicio"
        android:textAlignment="center"
        android:textColor="#DC0D0D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/opciones_prin"
        android:layout_width="411dp"
        android:layout_height="233dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <TextView
            android:id="@+id/op_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_op_1"
            android:textColor="#2F00FF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/op_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_op_2"
            android:textColor="#2F00FF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/op_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_op_3"
            android:textColor="#2F00FF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.497"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/op_4"
            android:layout_width="206dp"
            android:layout_height="42dp"
            android:text="@string/text_op_4"
            android:textColor="#2F00FF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.743"
            tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ingrese_op"
        android:layout_width="411dp"
        android:layout_height="373dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,VisualLintBounds">

        <EditText
            android:id="@+id/campo_op"
            android:layout_width="215dp"
            android:layout_height="63dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/boton_op"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_boton_op"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>